--- a/ubs/core/templates/core/menu_medical.html
+++ b/ubs/core/templates/core/menu_medical.html
@@ -13,10 +13,19 @@
             <ul class="sub-menu children dropdown-menu">
                 <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_query_history' %}">Consultas
                         Realizadas</a></li>
-                <li><i class="fa fa-th-large"></i><a href="{% url 'medical_query:await_querys' %}">Fila de
-                        Atendimentos</a></li>
+                <li><i class="fa fa-th-large"></i><a href="{% url 'medical_query:await_querys' %}">Pacientes do dia</a></li>
 
 
+            </ul>
+        </li>
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-share"></i>Encaminhamentos</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:forwarding_create' %}">Novo Encaminhamento</a></li>
+                <li><i class="fa fa-th-large"></i><a href="{% url 'medical_query:currents_forwarding' %}">Fila de Atendimentos</a></li>
+        
             </ul>
         </li>
 
