--- a/ubs/core/templates/core/menu_tecnical.html
+++ b/ubs/core/templates/core/menu_tecnical.html
@@ -33,6 +33,15 @@
 
         <li class="menu-item-has-children dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
+                    class="menu-icon fa fa-list-alt"></i>Consultas</a>
+            <ul class="sub-menu children dropdown-menu">
+                <li><i class="fa fa-list-alt"></i><a href="{% url 'medical_query:list_query_all_history' %}">Consultas
+                        Realizadas</a></li>
+            </ul>
+        </li>
+
+        <li class="menu-item-has-children dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i
                     class="menu-icon fa fa-share"></i>Encaminhamentos</a>
             <ul class="sub-menu children dropdown-menu">
                 <li><i class="fa fa-plus"></i><a href="{% url 'medical_query:forwarding_create' %}">Novo Encaminhamento</a></li>
